config email sender and fix css adding user.username

--- a/petstagram/templates/email-greeting.html
+++ b/petstagram/templates/email-greeting.html
@@ -15,23 +15,22 @@
 			margin: 2%;
 			max-width: 620px;">
     <div>
-		<table>
-			<nav style="">
-		<img style="width: 10rem;
-			 margin-top: 10px;
-			 margin-left: -4px;
+        <table>
+            <nav style="">
+                <img style="width: 10rem;
+			 margin: 20px 20px;
 			 height: 3.3rem;"
-			 src="https://jdzejo.stripocdn.email/content/guids/3be6ad80-cf0f-461f-807a-b499c494e798/images/screenshot_1_roO.png"
-			 alt="Logo">
-	</nav>
-		</table>
+                     src="https://jdzejo.stripocdn.email/content/guids/3be6ad80-cf0f-461f-807a-b499c494e798/images/screenshot_1_roO.png"
+                     alt="Logo">
+            </nav>
+        </table>
 
         <h1 style="			text-align: center;
                 color: rgb(65, 63, 63);
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
 
             <!-- Receiver username -->
-            Hello, username !</h1>
+            Hello,<span style="color: red;font-size: 32px;font-weight: bold"> {{ user.username }} </span>!</h1>
 
         <div style="display: flex;
                 justify-content: center;">
@@ -55,8 +54,7 @@
             Sincerely,
             <br>
             <img style="width: 30%;
-            margin-top: 10px;
-            margin-left: -4px;"
+            margin: 20px 20px;"
                  src="https://jdzejo.stripocdn.email/content/guids/3be6ad80-cf0f-461f-807a-b499c494e798/images/screenshot_1_roO.png"
                  alt="Logo">
         </p>
